--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,39 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+
+    <img src="../pictures/Lasagna-s.webp" alt="Picture of lasagna you´re about to cook" height="310" width="rel">
+
+    <h2>Description</h2>
+
+    <p>Making lasagna at home is easier than you might think. Don't let the layers of rich Italian flavors scare you off — give this homemade lasagna recipe a try today!</p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>Cheese: Cottage cheese, Parmesan, shredded mozzarella</li>
+        <li>Canned tomatoes: 1 can of tomato sauce, 1 can of crushed tomatoes</li>
+        <li>Eggs: 2 eggs</li>
+        <li>Fresh herbs: 2 tablespoons chopped parsley, 1 clove crushed garlic</li>
+        <li>Meat: ½ pound ground pork, ½ pound lean ground beef</li>
+        <li>Noodles: Lasagna noodles (uncooked or oven-ready)</li>
+        <li>Onion: 1 diced onion</li>
+        <li>Spices and seasonings: Dried basil, dried oregano, salt, black pepper</li>
+        <li>Sugar: A dash of sugar</li>
+    </ul>
+    
+   <h2>How to cook</h2>
+   <ol>
+        <li>Cook the meat: In a skillet, cook the ground meat until it’s browned and crumbly. Add the onion and continue cooking until it becomes translucent. Mix in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li>
+        <li>Cook the noodles: Boil the lasagna noodles in lightly salted water until they reach an al dente texture.</li>
+        <li>Prepare the cheese layer: In a bowl, combine cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper.</li>
+        <li>Assemble the lasagna: Layer the ingredients as per the recipe, starting with the sauce and ending with mozzarella, until the lasagna is fully assembled.</li>
+        <li>Bake the lasagna: Cover with foil and bake in a preheated oven for about 30 minutes. Remove the foil and continue baking until the top turns golden brown.</li>
+   </ol>
+    
+
+
     <a href="../index.html">Home</a>
+
 </body>
 </html>
