--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/lasagna.html">lasagna</a>
+    <a href="recipes/lasagna.html">Lasagna</a>
+    <a href="recipes/hamburger.html">Hamburger</a>
+    <a href="recipes/sushi.html">Sushi</a>
 </body>
 </html>
