--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna</title>
 </head>
 <body>
     <h1>Lasagna</h1>
@@ -37,8 +37,6 @@
         <li>Bake the lasagna: Cover with foil and bake in a preheated oven for about 30 minutes. Remove the foil and continue baking until the top turns golden brown.</li>
    </ol>
     
-
-
     <a href="../index.html">Home</a>
 
 </body>
